# cegui-vcpkg

./: .gitignore  CMakeLists.txt  README.md  README.zh-CN.md
CEGUI-0.7.9/: Makefile.in  configure
CEGUI-0.7.9/Samples/: Makefile.in
CEGUI-0.7.9/Samples/Demo6/: Makefile.in
CEGUI-0.7.9/Samples/Demo7/: Makefile.in
CEGUI-0.7.9/Samples/Demo8/: Makefile.in
CEGUI-0.7.9/Samples/DragDropDemo/: Makefile.in
CEGUI-0.7.9/Samples/FalagardDemo1/: Makefile.in
CEGUI-0.7.9/Samples/FirstWindow/: Makefile.in
CEGUI-0.7.9/Samples/FontDemo/: Makefile.in
CEGUI-0.7.9/Samples/InventoryDemo/: Makefile.in
CEGUI-0.7.9/Samples/Minesweeper/: Makefile.in
CEGUI-0.7.9/Samples/ScrollablePaneDemo/: Makefile.in
CEGUI-0.7.9/Samples/TabControlDemo/: Makefile.in
CEGUI-0.7.9/Samples/TextDemo/: Makefile.in
CEGUI-0.7.9/Samples/TreeDemo/: Makefile.in
CEGUI-0.7.9/Samples/common/: Makefile.in
CEGUI-0.7.9/Samples/common/include/: Makefile.in
CEGUI-0.7.9/Samples/common/src/: CEGuiOpenGLBaseApplication.cpp  Makefile.in
CEGUI-0.7.9/cegui/: Makefile.in
CEGUI-0.7.9/cegui/src/: Makefile.in
CEGUI-0.7.9/cegui/src/ImageCodecModules/: Makefile.in
CEGUI-0.7.9/cegui/src/ImageCodecModules/CoronaImageCodec/: Makefile.in
CEGUI-0.7.9/cegui/src/ImageCodecModules/DevILImageCodec/: Makefile.in
CEGUI-0.7.9/cegui/src/ImageCodecModules/FreeImageImageCodec/: Makefile.in
CEGUI-0.7.9/cegui/src/ImageCodecModules/SILLYImageCodec/: Makefile.in
CEGUI-0.7.9/cegui/src/ImageCodecModules/STBImageCodec/: Makefile.in
CEGUI-0.7.9/cegui/src/ImageCodecModules/TGAImageCodec/: Makefile.in
CEGUI-0.7.9/cegui/src/RendererModules/: Makefile.in
CEGUI-0.7.9/cegui/src/RendererModules/Direct3D10/: Makefile.in
CEGUI-0.7.9/cegui/src/ScriptingModules/: Makefile.in
CEGUI-0.7.9/cegui/src/WindowRendererSets/: Makefile.in
CEGUI-0.7.9/cegui/src/XMLParserModules/: Makefile.in
CEGUI-0.7.9/doc/: Makefile.in
CEGUI-0.7.9/doc/doxygen/: Makefile.in  doxyfile
CEGUI-0.7.9/projects/: Makefile.in
CEImagesetEditor-0.7.1/: AUTHORS  ChangeLog  Config.h.in  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac
CEImagesetEditor-0.7.1/Xcode/: CEImagesetEditor_Prefix.pch  Info.plist
CEImagesetEditor-0.7.1/Xcode/CEImagesetEditor.xcodeproj/: project.pbxproj
CEImagesetEditor-0.7.1/inc/: EditorDocument.h  EditorGLCanvas.h  EditorView.h  wxPathCellEditor.h
CEImagesetEditor-0.7.1/src/: DialogResourceGroups.cpp  EditorDocument.cpp  EditorFrame.cpp  EditorGLCanvas.cpp  EditorView.cpp  Makefile.in  PropertiesPanel.cpp  wxPathCellEditor.cpp
CEImagesetEditor-0.7.1/vc++7.1/: CEImagesetEditor.vcproj
CEImagesetEditor-0.7.1/vc++8/: CEImagesetEditor.vcproj
CEImagesetEditor-0.7.1/vc++9/: CEImagesetEditor.vcproj
CELayoutEditor-0.7.1/: ChangeLog.txt  Config.h.in  Makefile.am  Makefile.in  configure.ac  readme.txt
CELayoutEditor-0.7.1/dependencies/iniFile/: iniFile.cpp  iniFile.h
CELayoutEditor-0.7.1/inc/: CELayoutEditor.h  Config.h  EditorCanvas.h
CELayoutEditor-0.7.1/src/: CELayoutEditor.cpp  DialogAbout.cpp  DialogMain.cpp  EditorCanvas.cpp  EditorFrame.cpp  ExceptionManager.cpp  SimpleSymbolEngine.cpp
CELayoutEditor-0.7.1/vc++7.1/: CELayoutEditor.sln  CELayoutEditor.vcproj
CELayoutEditor-0.7.1/vc++9/: CELayoutEditor.rc  CELayoutEditor.vcproj
cmake/CEGUI-0.7.9/: CMakeLists.txt  config.h.cmake.in
cmake/CEGUI-0.7.9/BaseSystem/: CMakeLists.txt
cmake/CEGUI-0.7.9/ImageCodecModules/CoronaImageCodec/: CMakeLists.txt
cmake/CEGUI-0.7.9/ImageCodecModules/DevILImageCodec/: CMakeLists.txt
cmake/CEGUI-0.7.9/ImageCodecModules/SILLYImageCodec/: CMakeLists.txt
cmake/CEGUI-0.7.9/ImageCodecModules/STBImageCodec/: CMakeLists.txt
cmake/CEGUI-0.7.9/ImageCodecModules/TGAImageCodec/: CMakeLists.txt
cmake/CEGUI-0.7.9/RendererModules/Direct3D10/: CMakeLists.txt
cmake/CEGUI-0.7.9/RendererModules/Direct3D11/: CMakeLists.txt
cmake/CEGUI-0.7.9/RendererModules/Direct3D9/: CMakeLists.txt
cmake/CEGUI-0.7.9/RendererModules/Irrlicht/: CMakeLists.txt
cmake/CEGUI-0.7.9/RendererModules/Null/: CMakeLists.txt
cmake/CEGUI-0.7.9/RendererModules/Ogre/: CMakeLists.txt
cmake/CEGUI-0.7.9/RendererModules/OpenGL/: CMakeLists.txt
cmake/CEGUI-0.7.9/Samples/: CMakeLists.txt
cmake/CEGUI-0.7.9/Samples/Demo6/: CMakeLists.txt
cmake/CEGUI-0.7.9/Samples/Demo7/: CMakeLists.txt
cmake/CEGUI-0.7.9/Samples/Demo8/: CMakeLists.txt
cmake/CEGUI-0.7.9/Samples/DragDropDemo/: CMakeLists.txt
cmake/CEGUI-0.7.9/Samples/FalagardDemo1/: CMakeLists.txt
cmake/CEGUI-0.7.9/Samples/FirstWindow/: CMakeLists.txt
cmake/CEGUI-0.7.9/Samples/FontDemo/: CMakeLists.txt
cmake/CEGUI-0.7.9/Samples/InventoryDemo/: CMakeLists.txt
cmake/CEGUI-0.7.9/Samples/Minesweeper/: CMakeLists.txt
cmake/CEGUI-0.7.9/Samples/ScrollablePaneDemo/: CMakeLists.txt
cmake/CEGUI-0.7.9/Samples/TabControlDemo/: CMakeLists.txt
cmake/CEGUI-0.7.9/Samples/TextDemo/: CMakeLists.txt
cmake/CEGUI-0.7.9/Samples/TreeDemo/: CMakeLists.txt
cmake/CEGUI-0.7.9/Samples/common/: CMakeLists.txt
cmake/CEGUI-0.7.9/ScriptingModules/LuaScriptModule/: CMakeLists.txt
cmake/CEGUI-0.7.9/ScriptingModules/LuaScriptModule/support/tolua++/: CMakeLists.txt
cmake/CEGUI-0.7.9/ScriptingModules/LuaScriptModule/support/tolua++bin/: CMakeLists.txt
cmake/CEGUI-0.7.9/ScriptingModules/PythonScriptModule/: CMakeLists.txt
cmake/CEGUI-0.7.9/ScriptingModules/PythonScriptModule/PyCEGUI/: CMakeLists.txt
cmake/CEGUI-0.7.9/ScriptingModules/PythonScriptModule/PyCEGUINullRenderer/: CMakeLists.txt
cmake/CEGUI-0.7.9/ScriptingModules/PythonScriptModule/PyCEGUIOgreRenderer/: CMakeLists.txt
cmake/CEGUI-0.7.9/ScriptingModules/PythonScriptModule/PyCEGUIOpenGLRenderer/: CMakeLists.txt
cmake/CEGUI-0.7.9/WindowRendererSets/Falagard/: CMakeLists.txt
cmake/CEGUI-0.7.9/XMLParserModules/TinyXMLParser/: CMakeLists.txt
cmake/CEGUI-0.7.9/XMLParserModules/XercesParser/: CMakeLists.txt
cmake/CEGUI-0.7.9/XMLParserModules/expatParser/: CMakeLists.txt
cmake/CEGUI-0.7.9/XMLParserModules/libxmlParser/: CMakeLists.txt
cmake/CEImagesetEditor-0.7.1/: CMakeLists.txt
cmake/CELayoutEditor-0.7.1/: CMakeLists.txt
(+20 files in other folders)
