SUBDIRS=. src

noinst_HEADERS= inc/CEGUIHelper.h \
                inc/CEImagesetEditor.h \
                inc/Config.h \
                inc/DialogAbout.h \
                inc/DialogResourceGroups.h \
                inc/EditorDocument.h \
                inc/EditorFrame.h \
                inc/EditorGLCanvas.h \
                inc/EditorView.h \
                inc/ElasticBox.h \
                inc/ElasticBoxProperties.h \
                inc/ElasticBoxWindowRenderer.h \
                inc/ImagesetHandler.h \
                inc/PropertiesPanel.h \
                inc/wxPathCellEditor.h

EXTRA_DIST = src/bitmaps/Set_01.zip \
             src/bitmaps/copy.xpm \
             src/bitmaps/cut.xpm \
             src/bitmaps/delete.xpm \
             src/bitmaps/help.xpm \
             src/bitmaps/new.xpm \
             src/bitmaps/open.xpm \
             src/bitmaps/paste.xpm \
             src/bitmaps/save.xpm \
             vc++7.1/CEImagesetEditor.sln \
             vc++7.1/CEImagesetEditor.vcproj \
             vc++8/CEImagesetEditor.sln \
             vc++8/CEImagesetEditor.vcproj \
             vc++9/CEImagesetEditor.sln \
             vc++9/CEImagesetEditor.vcproj \
             Xcode/CEImagesetEditor.xcodeproj/project.pbxproj \
             Xcode/CEImagesetEditor_Prefix.pch \
             Xcode/English.lproj/InfoPlist.strings \
             Xcode/Info.plist \
             AUTHORS \
             COPYING \
             ChangeLog \
             INSTALL \
             README \
			 releasenotes.txt

dist_pkgdata_DATA = data/CEImagesetEditor.looknfeel \
                    data/CEImagesetEditor.scheme \
                    data/CEImagesetEditor.imageset \
                    data/CEImagesetEditor.tga \
                    data/Falagard.xsd \
                    data/GUIScheme.xsd \
                    data/Imageset.xsd
